# SWS_Ecosystem

./: local_manager.py  luu_y.txt  main.py  requirements.txt
AI_Camera/: .gitignore  luu_y.txt  main.py  requirements.txt
AI_Camera/modules/: ai_engine.py  constants.py
Servo/: CMakeLists.txt
Servo/main/: CMakeLists.txt  main.c
Servo/main/include/: app_config.h  sensor_handler.h  servo_control.h  uart_handler.h
Servo/main/src/: sensor_handler.c  servo_control.c  uart_handler.c
TrainAI/: CodeTrainAI.ipynb  Link_DATA_TrainAI.txt
TrainAI/DO_AN_TOT_NGHIEP/SWS_4Classes_CLAHE_Fixed/: args.yaml  results.csv
TrainAI/DO_AN_TOT_NGHIEP/SWS_4Classes_CLAHE_Fixed/weights/: best.pt  last.pt
TrainAI/DO_AN_TOT_NGHIEP/SWS_4Classes_NCNN/: model_ncnn.py
Web_server-20260517T035340Z-3-001/Web_server/: history.html  index.html  main.js  style.css
Web_server-20260517T035340Z-3-001/Web_server/js/: firebase.js
auto-car/: CMakeLists.txt  sdkconfig  sdkconfig.old
auto-car/main/: CMakeLists.txt  bno055.c  bno055.h  encoder.c  encoder.h  kinematics.c  kinematics.h  main.c  motor.c  motor.h  uart_link.c  uart_link.h
models/waste_ncnn/: model.ncnn.param
models/waste_ncnn_model/: metadata.yaml
modules/: ai_engine.py  constants.py  hardware.py
